--- a/web/index.html
+++ b/web/index.html
@@ -32,8 +32,8 @@
   <title>karakuri_agent</title>
   <link rel="manifest" href="manifest.json">
   <!-- vad-web https://github.com/ricky0123/vad -->
-  <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@1.19.2/dist/ort.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@ricky0123/vad-web@0.0.18/dist/bundle.min.js"></script>
+  <script src="node_modules/onnxruntime-web/dist/ort.js"></script>
+  <script src="node_modules/@ricky0123/vad-web/dist/bundle.min.js"></script>
   <script src="js/voice_activity_detaction.js" defer></script>
 </head>
 <body>
